// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots molecules|Group default 1`] = `
.c0 {
  padding: 12px;
}

.c7 {
  height: 1em;
  line-height: 1em;
  text-transform: none;
  cursor: pointer;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  font-size: 22px;
  width: 0;
}

.c7 svg {
  vertical-align: middle;
}

.c8 {
  font-family: 'Fira Sans',sans-serif;
}

.c9 .c5 {
  font-size: 1.5em;
  margin-right: 0.625em;
}

.c10 .c5 {
  font-size: 1.5em;
  margin-right: 0.625em;
}

.c11 .c5 {
  font-size: 1.5em;
  margin-right: 0.625em;
}

.c12 .c5 {
  font-size: 1.5em;
  margin-right: 0.625em;
}

.c13 .c5 {
  font-size: 1.5em;
  margin-right: 0.625em;
}

.c14 .c5 {
  font-size: 1.5em;
  margin-right: 0.625em;
}

.c15 .c5 {
  font-size: 1.5em;
  margin-right: 0.625em;
}

.c16 .c5 {
  font-size: 1.5em;
  margin-right: 0.625em;
}

.c17 .c5 {
  font-size: 1.5em;
  margin-right: 0.625em;
}

.c18 .c5 {
  font-size: 1.5em;
  margin-right: 0.625em;
}

.c19 .c5 {
  font-size: 1.5em;
  margin-right: 0.625em;
}

.c20 .c5 {
  font-size: 1.5em;
}

.c21 .c5 {
  font-size: 1.5em;
}

.c22 .c5 {
  font-size: 1.5em;
}

.c23 .c5 {
  font-size: 1.5em;
}

.c24 .c5 {
  font-size: 1.5em;
}

.c25 .c5 {
  font-size: 1.5em;
}

.c26 .c5 {
  font-size: 1.5em;
}

.c27 .c5 {
  font-size: 1.5em;
}

.c28 .c5 {
  font-size: 1.5em;
}

.c29 .c5 {
  font-size: 1.5em;
}

.c30 .c5 {
  font-size: 1.5em;
}

.c31 .c5 {
  font-size: 1.5em;
}

.c32 .c5 {
  font-size: 1.5em;
}

.c33 .c5 {
  font-size: 1.5em;
}

.c34 .c5 {
  font-size: 1.5em;
}

.c35 .c5 {
  font-size: 1.5em;
}

.c36 .c5 {
  font-size: 1.5em;
}

.c37 .c5 {
  font-size: 1.5em;
}

.c3 {
  font-family: 'Fira Sans',sans-serif;
  font-weight: normal;
  font-size: 16px;
  color: #222;
  line-height: 1.5;
  margin: 1.25rem 0;
}

.c3:first-child {
  margin-top: 0;
}

.c3:last-child {
  margin-bottom: 0;
}

.c3,
input.c3 {
  font-size: 1.5em;
}

.c3 .c5 {
  margin-right: 1.25em;
  display: inline-block;
  -webkit-transform: scale(1.5);
  -ms-transform: scale(1.5);
  transform: scale(1.5);
  -webkit-transform-origin: left 25%;
  -ms-transform-origin: left 25%;
  transform-origin: left 25%;
}

.c6 {
  height: 1em;
  line-height: 1em;
  text-transform: none;
  margin-top: -7px;
  font-size: 30px;
}

.c6 svg {
  vertical-align: middle;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  margin: 20px 0 10px 0;
}

.c4 {
  width: 100%;
  height: 1px;
  background-color: #eee;
  border: 0;
  margin: 12px 10px;
}

.c2 h1 {
  white-space: nowrap;
  color: #999;
  font-size: 1em;
}

.c38 .c5 {
  pointer-events: none;
}

<div
  className="c0"
>
  <div
    className="c1"
  >
    <div
      className="c2"
    >
      <h1
        className="c3"
        type="header"
      >
        Global options
      </h1>
    </div>
    <hr
      className="c4"
    />
    <span
      className="c5 c6"
    >
      <span
        className="c5 c7"
        data-test="container-collapser"
        onClick={[Function]}
      >
        <svg
          fill="currentColor"
          height="1em"
          stroke="currentColor"
          strokeWidth="0"
          style={
            Object {
              "color": undefined,
            }
          }
          viewBox="0 0 24 24"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M7.41 15.41L12 10.83l4.59 4.58L18 14l-6-6-6 6z"
          />
        </svg>
      </span>
    </span>
  </div>
  <div
    className="c8"
  >
    Aut quaerat aperiam error impedit magni laudantium quis. Vitae modi quas ut eligendi vitae blanditiis molestiae ea aut. Harum quae et iure optio praesentium voluptas id nisi. Nulla minima molestiae illum dolorem expedita fuga aut qui id. Id sit soluta. Qui praesentium sunt.
 
Accusantium a facere maiores qui. Maxime quo qui voluptatibus qui qui. Tempore voluptatum dicta et doloribus ea.
 
Asperiores eaque et est eaque consequuntur quisquam dolorum est aut. Ut odit alias minima hic omnis et. Quibusdam excepturi repudiandae porro ratione beatae nesciunt et amet quo. Optio et iste doloribus eos quo maxime. Voluptatem voluptates repellat in sunt magnam rerum quia. Sed necessitatibus vel officiis ratione pariatur.
 
Illum qui enim veniam voluptatibus doloribus ut et. Et ipsam est voluptates quia consequatur et. Quae excepturi tempora itaque voluptas doloremque. Porro atque necessitatibus est accusantium.
  </div>
</div>
`;

exports[`Storyshots molecules|Group helpers 1`] = `
.c0 {
  padding: 12px;
}

<div
  className="c0"
/>
`;

exports[`Storyshots molecules|Group with icons 1`] = `
.c0 {
  padding: 12px;
}

.c7 {
  font-family: 'Fira Sans',sans-serif;
}

.c8 .c5 {
  font-size: 1.5em;
  margin-right: 0.625em;
}

.c9 .c5 {
  font-size: 1.5em;
  margin-right: 0.625em;
}

.c10 .c5 {
  font-size: 1.5em;
  margin-right: 0.625em;
}

.c11 .c5 {
  font-size: 1.5em;
  margin-right: 0.625em;
}

.c12 .c5 {
  font-size: 1.5em;
  margin-right: 0.625em;
}

.c13 .c5 {
  font-size: 1.5em;
  margin-right: 0.625em;
}

.c14 .c5 {
  font-size: 1.5em;
  margin-right: 0.625em;
}

.c15 .c5 {
  font-size: 1.5em;
  margin-right: 0.625em;
}

.c16 .c5 {
  font-size: 1.5em;
  margin-right: 0.625em;
}

.c17 .c5 {
  font-size: 1.5em;
  margin-right: 0.625em;
}

.c18 .c5 {
  font-size: 1.5em;
  margin-right: 0.625em;
}

.c19 .c5 {
  font-size: 1.5em;
}

.c20 .c5 {
  font-size: 1.5em;
}

.c21 .c5 {
  font-size: 1.5em;
}

.c22 .c5 {
  font-size: 1.5em;
}

.c23 .c5 {
  font-size: 1.5em;
}

.c24 .c5 {
  font-size: 1.5em;
}

.c25 .c5 {
  font-size: 1.5em;
}

.c26 .c5 {
  font-size: 1.5em;
}

.c27 .c5 {
  font-size: 1.5em;
}

.c28 .c5 {
  font-size: 1.5em;
}

.c29 .c5 {
  font-size: 1.5em;
}

.c30 .c5 {
  font-size: 1.5em;
}

.c31 .c5 {
  font-size: 1.5em;
}

.c32 .c5 {
  font-size: 1.5em;
}

.c33 .c5 {
  font-size: 1.5em;
}

.c34 .c5 {
  font-size: 1.5em;
}

.c35 .c5 {
  font-size: 1.5em;
}

.c36 .c5 {
  font-size: 1.5em;
}

.c3 {
  font-family: 'Fira Sans',sans-serif;
  font-weight: normal;
  font-size: 16px;
  color: #222;
  line-height: 1.5;
  margin: 1.25rem 0;
}

.c3:first-child {
  margin-top: 0;
}

.c3:last-child {
  margin-bottom: 0;
}

.c3,
input.c3 {
  font-size: 1.5em;
}

.c3 .c5 {
  margin-right: 1.25em;
  display: inline-block;
  -webkit-transform: scale(1.5);
  -ms-transform: scale(1.5);
  transform: scale(1.5);
  -webkit-transform-origin: left 25%;
  -ms-transform-origin: left 25%;
  transform-origin: left 25%;
}

.c6 {
  height: 1em;
  line-height: 1em;
  text-transform: none;
  margin-top: -7px;
  font-size: 30px;
}

.c6 svg {
  vertical-align: middle;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  margin: 20px 0 10px 0;
}

.c4 {
  width: 100%;
  height: 1px;
  background-color: #eee;
  border: 0;
  margin: 12px 10px;
}

.c2 h1 {
  white-space: nowrap;
  color: #999;
  font-size: 1em;
}

.c37 .c5 {
  pointer-events: none;
}

<div
  className="c0"
>
  <div
    className="c1"
  >
    <div
      className="c2"
    >
      <h1
        className="c3"
        type="header"
      >
        Configuration
      </h1>
    </div>
    <hr
      className="c4"
    />
    <hr
      className="c4"
    />
    <span
      className="c5 c6"
    >
      <svg
        fill="currentColor"
        height="1em"
        stroke="currentColor"
        strokeWidth="0"
        style={
          Object {
            "color": undefined,
          }
        }
        viewBox="0 0 24 24"
        width="1em"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M20 4H4c-1.1 0-1.99.9-1.99 2L2 18c0 1.1.9 2 2 2h16c1.1 0 2-.9 2-2V6c0-1.1-.9-2-2-2zm0 4l-8 5-8-5V6l8 5 8-5v2z"
        />
      </svg>
    </span>
    <span
      className="c5 c6"
    >
      <svg
        fill="currentColor"
        height="1em"
        stroke="currentColor"
        strokeWidth="0"
        style={
          Object {
            "color": undefined,
          }
        }
        viewBox="0 0 24 24"
        width="1em"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M12 22c1.1 0 2-.9 2-2h-4c0 1.1.89 2 2 2zm6-6v-5c0-3.07-1.64-5.64-4.5-6.32V4c0-.83-.67-1.5-1.5-1.5s-1.5.67-1.5 1.5v.68C7.63 5.36 6 7.92 6 11v5l-2 2v1h16v-1l-2-2z"
        />
      </svg>
    </span>
    <span
      className="c5 c6"
    >
      <svg
        fill="currentColor"
        height="1em"
        stroke="currentColor"
        strokeWidth="0"
        style={
          Object {
            "color": undefined,
          }
        }
        viewBox="0 0 24 24"
        width="1em"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M3 5v14c0 1.1.89 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2H5c-1.11 0-2 .9-2 2zm12 4c0 1.66-1.34 3-3 3s-3-1.34-3-3 1.34-3 3-3 3 1.34 3 3zm-9 8c0-2 4-3.1 6-3.1s6 1.1 6 3.1v1H6v-1z"
        />
      </svg>
    </span>
    <hr
      className="c4"
    />
  </div>
  <div
    className="c7"
  >
    Et tempore distinctio. Est vitae dolorem incidunt nobis quia animi sint expedita. Sint omnis quasi corporis rem fugiat atque iusto.
 
Aut nihil doloremque deleniti et consequuntur autem reiciendis est nesciunt. Sed recusandae et provident ea ducimus. Voluptas qui nisi amet. Facilis ducimus facere. Non aut animi vel placeat sapiente quidem nemo mollitia non.
 
Minus ea rerum. Nihil molestiae dolor. Illo temporibus fugiat placeat consectetur. Qui vitae ullam velit beatae architecto.
 
Quis quisquam provident ducimus dolores in magni sed quia quisquam. Nulla molestias similique. Est ex ut odit saepe. Animi odit repellendus maiores temporibus dolor voluptatibus sunt nobis. Et repellendus quasi. Provident non qui quod.
  </div>
</div>
`;

exports[`Storyshots molecules|Group x-inverted 1`] = `
.c0 {
  padding: 12px;
}

.c4 {
  height: 1em;
  line-height: 1em;
  text-transform: none;
  cursor: pointer;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  font-size: 22px;
  width: 0;
}

.c4 svg {
  vertical-align: middle;
}

.c8 {
  font-family: 'Fira Sans',sans-serif;
}

.c9 .c2 {
  font-size: 1.5em;
  margin-right: 0.625em;
}

.c10 .c2 {
  font-size: 1.5em;
  margin-right: 0.625em;
}

.c11 .c2 {
  font-size: 1.5em;
  margin-right: 0.625em;
}

.c12 .c2 {
  font-size: 1.5em;
  margin-right: 0.625em;
}

.c13 .c2 {
  font-size: 1.5em;
  margin-right: 0.625em;
}

.c14 .c2 {
  font-size: 1.5em;
  margin-right: 0.625em;
}

.c15 .c2 {
  font-size: 1.5em;
  margin-right: 0.625em;
}

.c16 .c2 {
  font-size: 1.5em;
  margin-right: 0.625em;
}

.c17 .c2 {
  font-size: 1.5em;
  margin-right: 0.625em;
}

.c18 .c2 {
  font-size: 1.5em;
  margin-right: 0.625em;
}

.c19 .c2 {
  font-size: 1.5em;
  margin-right: 0.625em;
}

.c20 .c2 {
  font-size: 1.5em;
}

.c21 .c2 {
  font-size: 1.5em;
}

.c22 .c2 {
  font-size: 1.5em;
}

.c23 .c2 {
  font-size: 1.5em;
}

.c24 .c2 {
  font-size: 1.5em;
}

.c25 .c2 {
  font-size: 1.5em;
}

.c26 .c2 {
  font-size: 1.5em;
}

.c27 .c2 {
  font-size: 1.5em;
}

.c28 .c2 {
  font-size: 1.5em;
}

.c29 .c2 {
  font-size: 1.5em;
}

.c30 .c2 {
  font-size: 1.5em;
}

.c31 .c2 {
  font-size: 1.5em;
}

.c32 .c2 {
  font-size: 1.5em;
}

.c33 .c2 {
  font-size: 1.5em;
}

.c34 .c2 {
  font-size: 1.5em;
}

.c35 .c2 {
  font-size: 1.5em;
}

.c36 .c2 {
  font-size: 1.5em;
}

.c37 .c2 {
  font-size: 1.5em;
}

.c7 {
  font-family: 'Fira Sans',sans-serif;
  font-weight: normal;
  font-size: 16px;
  color: #222;
  line-height: 1.5;
  margin: 1.25rem 0;
}

.c7:first-child {
  margin-top: 0;
}

.c7:last-child {
  margin-bottom: 0;
}

.c7,
input.c7 {
  font-size: 1.5em;
}

.c7 .c2 {
  margin-right: 1.25em;
  display: inline-block;
  -webkit-transform: scale(1.5);
  -ms-transform: scale(1.5);
  transform: scale(1.5);
  -webkit-transform-origin: left 25%;
  -ms-transform-origin: left 25%;
  transform-origin: left 25%;
}

.c3 {
  height: 1em;
  line-height: 1em;
  text-transform: none;
  margin-top: -7px;
  font-size: 30px;
}

.c3 svg {
  vertical-align: middle;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  margin: 20px 0 10px 0;
}

.c5 {
  width: 100%;
  height: 1px;
  background-color: #eee;
  border: 0;
  margin: 12px 10px;
}

.c6 h1 {
  white-space: nowrap;
  color: #999;
  font-size: 1em;
}

.c38 .c2 {
  pointer-events: none;
}

<div
  className="c0"
>
  <div
    className="c1"
  >
    <span
      className="c2 c3"
    >
      <span
        className="c2 c4"
        data-test="container-collapser"
        onClick={[Function]}
      >
        <svg
          fill="currentColor"
          height="1em"
          stroke="currentColor"
          strokeWidth="0"
          style={
            Object {
              "color": undefined,
            }
          }
          viewBox="0 0 24 24"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M7.41 15.41L12 10.83l4.59 4.58L18 14l-6-6-6 6z"
          />
        </svg>
      </span>
    </span>
    <hr
      className="c5"
    />
    <div
      className="c6"
    >
      <h1
        className="c7"
        type="header"
      >
        Configuration
      </h1>
    </div>
  </div>
  <div
    className="c8"
  >
    Nemo voluptas rerum eos rerum natus sint. Ut qui aut et dolores nostrum suscipit aut. In sed enim qui sint quo sint cupiditate molestiae neque.
 
Quis inventore recusandae rerum itaque in nulla vel et rerum. Consequuntur dicta voluptate tempora. Ipsam voluptatem quia vero est.
 
Tenetur illum dolorem amet odio cumque. Labore debitis sunt deleniti. In inventore ad tempora ab.
 
Dolores omnis occaecati dolor. Qui sunt non repellat. Illum qui deserunt. Reiciendis corporis ut voluptas. Et aperiam quo explicabo adipisci et quasi.
  </div>
</div>
`;

exports[`Storyshots molecules|Group y-inverted 1`] = `
.c0 {
  padding: 12px;
}

.c8 {
  height: 1em;
  line-height: 1em;
  text-transform: none;
  cursor: pointer;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  font-size: 22px;
  width: 0;
}

.c8 svg {
  vertical-align: middle;
}

.c1 {
  font-family: 'Fira Sans',sans-serif;
}

.c9 .c6 {
  font-size: 1.5em;
  margin-right: 0.625em;
}

.c10 .c6 {
  font-size: 1.5em;
  margin-right: 0.625em;
}

.c11 .c6 {
  font-size: 1.5em;
  margin-right: 0.625em;
}

.c12 .c6 {
  font-size: 1.5em;
  margin-right: 0.625em;
}

.c13 .c6 {
  font-size: 1.5em;
  margin-right: 0.625em;
}

.c14 .c6 {
  font-size: 1.5em;
  margin-right: 0.625em;
}

.c15 .c6 {
  font-size: 1.5em;
  margin-right: 0.625em;
}

.c16 .c6 {
  font-size: 1.5em;
  margin-right: 0.625em;
}

.c17 .c6 {
  font-size: 1.5em;
  margin-right: 0.625em;
}

.c18 .c6 {
  font-size: 1.5em;
  margin-right: 0.625em;
}

.c19 .c6 {
  font-size: 1.5em;
  margin-right: 0.625em;
}

.c20 .c6 {
  font-size: 1.5em;
}

.c21 .c6 {
  font-size: 1.5em;
}

.c22 .c6 {
  font-size: 1.5em;
}

.c23 .c6 {
  font-size: 1.5em;
}

.c24 .c6 {
  font-size: 1.5em;
}

.c25 .c6 {
  font-size: 1.5em;
}

.c26 .c6 {
  font-size: 1.5em;
}

.c27 .c6 {
  font-size: 1.5em;
}

.c28 .c6 {
  font-size: 1.5em;
}

.c29 .c6 {
  font-size: 1.5em;
}

.c30 .c6 {
  font-size: 1.5em;
}

.c31 .c6 {
  font-size: 1.5em;
}

.c32 .c6 {
  font-size: 1.5em;
}

.c33 .c6 {
  font-size: 1.5em;
}

.c34 .c6 {
  font-size: 1.5em;
}

.c35 .c6 {
  font-size: 1.5em;
}

.c36 .c6 {
  font-size: 1.5em;
}

.c37 .c6 {
  font-size: 1.5em;
}

.c4 {
  font-family: 'Fira Sans',sans-serif;
  font-weight: normal;
  font-size: 16px;
  color: #222;
  line-height: 1.5;
  margin: 1.25rem 0;
}

.c4:first-child {
  margin-top: 0;
}

.c4:last-child {
  margin-bottom: 0;
}

.c4,
input.c4 {
  font-size: 1.5em;
}

.c4 .c6 {
  margin-right: 1.25em;
  display: inline-block;
  -webkit-transform: scale(1.5);
  -ms-transform: scale(1.5);
  transform: scale(1.5);
  -webkit-transform-origin: left 25%;
  -ms-transform-origin: left 25%;
  transform-origin: left 25%;
}

.c7 {
  height: 1em;
  line-height: 1em;
  text-transform: none;
  margin-top: -7px;
  font-size: 30px;
}

.c7 svg {
  vertical-align: middle;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  margin: 20px 0 10px 0;
}

.c5 {
  width: 100%;
  height: 1px;
  background-color: #eee;
  border: 0;
  margin: 12px 10px;
}

.c3 h1 {
  white-space: nowrap;
  color: #999;
  font-size: 1em;
}

.c38 .c6 {
  pointer-events: none;
}

<div
  className="c0"
>
  <div
    className="c1"
  >
    Autem voluptatem aut id dolorem tenetur aut esse assumenda adipisci. Dolorem harum fuga libero inventore voluptatum voluptas perferendis voluptatibus. Est quos non qui qui. Odio blanditiis laborum eos voluptatem aut.
 
Enim voluptatem asperiores maiores dolorem eius laudantium laboriosam quidem. Eaque facere aliquam laudantium accusamus consequuntur eos. Sit quas est tempore accusamus.
 
Magni qui voluptatem eos occaecati. Consequatur qui perferendis aut tempore optio est facere ducimus in. Dolores facilis consequatur consequatur odit atque suscipit vero error eum. Est praesentium tempore vel culpa dolore ad. Natus aut tempore unde aliquid dolore. Aut adipisci dolore placeat magnam nostrum et est voluptatem.
 
Consequatur vel ex aperiam numquam nulla assumenda. Nemo reiciendis minus inventore maxime neque. Sit numquam ut velit. Qui quos autem minus accusantium.
  </div>
  <div
    className="c2"
  >
    <div
      className="c3"
    >
      <h1
        className="c4"
        type="header"
      >
        Configuration
      </h1>
    </div>
    <hr
      className="c5"
    />
    <span
      className="c6 c7"
    >
      <span
        className="c6 c8"
        data-test="container-collapser"
        onClick={[Function]}
      >
        <svg
          fill="currentColor"
          height="1em"
          stroke="currentColor"
          strokeWidth="0"
          style={
            Object {
              "color": undefined,
            }
          }
          viewBox="0 0 24 24"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M7.41 15.41L12 10.83l4.59 4.58L18 14l-6-6-6 6z"
          />
        </svg>
      </span>
    </span>
  </div>
</div>
`;
